cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_145.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_utf8.c:106: error: DEAD_STORE
  The value written to &p (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_utf8.c:106:19: Write of unused value
104.           value |= ((unsigned long)(*p++ & 0x3f)) << 12;
105.           value |= (*p++ & 0x3f) << 6;
106.           value |= *p++ & 0x3f;
                         ^
107.           if (value < 0x4000000)
108.               return -4;
